<resources>
    <string name="app_name">Chat</string>
    <string name="loginButton">Login</string>
    <string name="LoginToRegisterButton">Register</string>
    <string name="have_not_accounted_yet">Have not accounted yet?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type_your_message">type your message</string>
    <string name="server">server</string>
    <string name="name">name</string>
    <string name="add">Add</string>
    <string name="BaseUrl">http://10.0.2.2:1234/api/</string>
    <string name="InviteUrl">""</string>
    <string name="invitation_failed">invitation failed</string>
    <string name="username_already_exist">username already exist</string>
    <string name="Server_error">Server error</string>
    <string name="change_server">change server</string>
</resources>